# yq_BackupHelper

./: .gitignore  CMakeLists.txt  Plugin.cpp  README.md
include/: Backup.h  BackupCommand.h  Command.h  Message.h  Player.h  Plugin.h  ScheduleAPI.h  pch.h
lib/: SymHook.h  seh_exception.hpp
src/: Backup.cpp  BackupCommand.cpp  Command.cpp  Message.cpp  Player.cpp  ScheduleAPI.cpp  dllmain.cpp
